_sass/components/header.scss
header {

	$nav-padding: 24px;
	&.mdl-layout__header {
		background-color: $hs-primary-600;
		transition: box-shadow 0.1s, background-color 0.25s;		
		.transparent-header & .mdl-layout__drawer-button {
			background-color: transparent;
		}
	}

	
	// Hack of MDL header to be fixed
	position: fixed;

	.mdl-layout__drawer-button {
		@media (min-width: $header-type-breakpoint) {
			display: none;
		}
	}

	.mdl-layout__header-row {

		align-self: center;
		padding: 0;

		.logo {
			height: 28px;
			margin-top: -2px;
		}

		@media (min-width: $header-type-breakpoint) {
			padding: 0 $nav-padding;
			height: 72px;
			align-self: stretch;
			.logo {
				height: 28px;
			}
		}
	}

	.mdl-navigation__link {
		cursor: pointer;
	}

	.mdl-menu__container {
		right: 8px!important;
		top: 48px!important;
		@media (min-width: $header-type-breakpoint) {
			top: 56px!important;
		}
	}

	// MENU CHANGE
	.mdl-navigation {
		position: absolute;
		right: $nav-padding;
	}
	@media (max-width: $header-type-breakpoint) {
		.mdl-navigation { right: 8px; }
		.mdl-layout__header-row .mdl-navigation__link:not(.never-hide) {
			display: none;
		}
	}

}

header.transparent, .transparent-header header.start-transparent {
	background-color: rgba(0,188,212,0);
	box-shadow: none;
}

